--- a/magda-web-client/public/index.html
+++ b/magda-web-client/public/index.html
@@ -59,7 +59,7 @@ window.console.log = window.console.log || function() {};
     <script src="/server-config.js"></script>
     <title>Search</title>
 </head>
-<body>
+<body class="au-body">
 <!-- Start Google Analytics Tag Manager Code-->
 <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KPSGPGD" height="0" width="0"
         style="display:none;visibility:hidden"></iframe>
