--- a/magda-web-client/public/index.html
+++ b/magda-web-client/public/index.html
@@ -9,35 +9,41 @@
     <link href="//cdn.muicss.com/mui-0.9.33/css/mui.min.css" rel="stylesheet" type="text/css" media="screen"/>
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap"/>
     <script>
-        var _rollbarConfig = {
-            accessToken: "cf418960a0ae4c00a1eeec43ae7500c8",
-            enabled: ('%NODE_ENV%' === 'production'),
-            captureUncaught: true,
-            captureUnhandledRejections: true,
-            verbose: true, // This will now log to console.log, as well as Rollbar
-            hostBlackList: ['127.0.0.1','localhost','192.168.99.1','192.168.99.100','minikube.data.gov.au'], // exclude local dev
-            payload: {
-                environment: "production",
-                client: {
-                    javascript: {
-                        source_map_enabled: true, //this is now true by default
-                        code_version: '%REACT_APP_SHA1%',
-                        // Optionally have Rollbar guess which frames the error was thrown from
-                        // when the browser does not provide line and column numbers.
-                        guess_uncaught_frames: true
-                    }
-                }
+    var _rollbarConfig = {
+    accessToken: "cf418960a0ae4c00a1eeec43ae7500c8",
+    enabled: "%NODE_ENV%" === "production",
+    captureUncaught: true,
+    captureUnhandledRejections: true,
+    verbose: true, // This will now log to console.log, as well as Rollbar
+    hostBlackList: [
+        "127.0.0.1",
+        "localhost",
+        "192.168.99.1",
+        "192.168.99.100",
+        "minikube.data.gov.au"
+    ], // exclude local dev
+    payload: {
+        environment: "production",
+        client: {
+            javascript: {
+                source_map_enabled: true, //this is now true by default
+                code_version: "%REACT_APP_SHA1%",
+                // Optionally have Rollbar guess which frames the error was thrown from
+                // when the browser does not provide line and column numbers.
+                guess_uncaught_frames: true
             }
-        };
-    </script>
+        }
+    }
+};
+</script>
 
     <!--[if lte IE 9]>
     <script type="text/javascript">
-        'use strict';
-        // IE9 Console Bug Fix
-        window.console = window.console || {};
-        window.console.log = window.console.log || function() {};
-    </script>
+    "use strict";
+// IE9 Console Bug Fix
+window.console = window.console || {};
+window.console.log = window.console.log || function() {};
+</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.10/es5-shim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.10/es5-sham.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.35.3/es6-shim.min.js"></script>
